--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-ui",
-  "version": "3.0.0",
-  "description": "Bootstrap UI is a Bootstrap 3 extension for building beautiful web apps user interfaces.",
+  "version": "4.0.0",
+  "description": "Bootstrap UI is a Bootstrap 4 extension for building beautiful web apps user interfaces.",
   "repository": {
     "type": "git",
     "url": "git@github.com:visionappscz/bootstrap-ui.git"
@@ -10,41 +10,39 @@
   "author": "VisionApps",
   "license": "MIT",
   "style": "dist/css/bootstrap-ui.css",
-  "less": "src/less/bootstrap-ui.less",
-  "scripts": {
-    "test": "grunt test"
-  },
+  "scss": "src/scss/bootstrap-ui.scss",
   "devDependencies": {
-    "autoprefixer": "^8.1.0",
+    "browser-sync": "^2.24.4",
     "chai": "^4.1.2",
-    "cssnano": "^3.5.2",
-    "grunt": "^1.0.2",
-    "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-less": "^1.4.0",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-jscs": "^3.0.1",
-    "grunt-kss": "^5.0.1",
-    "grunt-mocha-phantomjs": "^4.0.0",
-    "grunt-postcss": "~0.9.0",
-    "grunt-text-replace": "~0.4.0",
-    "load-grunt-config": "~0.19.0",
-    "mocha": "^5.0.1",
-    "sinon": "^4.4.2",
-    "time-grunt": "^1.4.0"
+    "del": "^3.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-eslint": "^4.0.2",
+    "gulp-exec": "^3.0.1",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-stylelint": "^7.0.0",
+    "gulp-uglify": "^3.0.0",
+    "kss": "^3.0.0-beta.20",
+    "mocha": "^5.2.0",
+    "sinon": "^6.0.0",
+    "stylelint": "^9.3.0",
+    "stylelint-config-visionapps": "~0.5.0",
+    "stylelint-config-visionapps-order": "~0.3.1",
+    "stylelint-order": "~0.8.1"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "ckeditor": "^4.8.0",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-    "jquery": "^1.12.4",
-    "moment": "^2.21.0",
-    "select2": "^3.5.1",
-    "select2-bootstrap-css": "^1.4.6"
+    "bootstrap": "^4.1.1",
+    "ckeditor": "^4.9.2",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "popper.js": "^1.14.3"
   },
   "engines": {
     "node": "^8.0.0"
